test_suite/tests/ui/enum-representation/untagged-struct.stderr
error: #[serde(untagged)] can only be used on enums
 --> tests/ui/enum-representation/untagged-struct.rs:5:1
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | #[serde(untagged)]
5 | struct S;
  | ^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
